[package]
name = "imptokens"
version = "0.1.0"
edition = "2021"
description = "Fast logprob-based token compression using llama.cpp"

[[bin]]
name = "imptokens"
path = "src/main.rs"

[lib]
name = "imptokens"
path = "src/lib.rs"

[features]
# GPU backends — pick at most one when building.
# macOS Apple Silicon:   cargo build --release --features metal
# NVIDIA CUDA:           cargo build --release --features cuda
# Cross-platform Vulkan: cargo build --release --features vulkan
metal  = ["llama-cpp-2/metal"]
cuda   = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
llama-cpp-2 = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hf-hub = "0.3"
